docs/sass/styles.scss
:root {
	--color__border: #eee;
	--color__button--background: #fff;
	--color__button--border: #444;
	--color__button--text: #222;
	--color__link--unvisited: #ddd;
	--color__text--dark-bg: #fff;
	--color__text--light-bg: #000;

	--font-family__primary: sans-serif;

	--img__hero: url(../img/Halifax_Sunset_by_Vlad_Drobinin.jpg); 
	--img__about-me: url(../img/warty-final-ubuntu.png);
	--img__another-card: url(../img/Definitive_Light_Zen_Orange_by_Pierre_Cante.jpg);
	--img__foundation: url(../img/Raindrops_On_The_Table_by_Alex_Fazit.jpg);
	--img__comprehensive: url(../img/El_Haouaria_by_Nusi_Nusi.jpg);
	--img__portfolio: url(../img/Crocus_Wallpaper_by_Roy_Tanck.jpg);
	--img__something-else: url(../img/Spices_in_Athens_by_Makis_Chourdakis.jpg);

	--line-height__content: 1.7em;

	--margin__main-content: 2.5em;
}



/* Mixins */
/* is-a Card */
@mixin SectionCard($img) {
	@extend %Card;

	h2 {
		background-image: $img;

		display: flex;
		justify-content: center;
		align-items: flex-end;

		padding-bottom: 2em;
		@extend %ImageContainer;
	}

	p {
		line-height: var(--line-height__content);
		margin: 1.5em;
	}
}

/* is-a Card */
@mixin ServiceCard($img) {
	@extend %Card;

	margin-bottom: 1.5em;

	div {
		background-image: $img;
		@extend %ImageContainer;
	}

	h3 {
		text-align: center;
	}

	ul {
		line-height: var(--line-height__content);
	}

	li + li {
		margin-top: 1em;
	}
}



/* Placeholders */
%Card {
	border-style: solid;
	border-width: 1px;
	border-color: var(--color__border);
	box-shadow: 0.1em 0.2em 0.3em 0.1em #ddd; 
}

%Button {
	background: var(--color__button--background);
	border-color: var(--color__button--border);
	color: var(--color__button--text);

	border-radius: 50rem;
	border-style: solid;
	border-width: 4px;
	box-shadow: 0.1em 0.2em 0.3em 0.1em #ddd; 

	font-size: 1.5rem;

	--margin-horizontal: 3rem;
	--margin-vertical: 0.7rem;
	margin-left: var(--margin-horizontal);
	margin-right: var(--margin-horizontal);
	margin-top: var(--margin-vertical);
	margin-bottom: var(--margin-vertical);
	padding: 0.5em;
}

%ImageContainer {
	background-attachment: fixed;
	background-size: cover;
	background-repeat: no-repeat;
	height: 8rem;
	margin: 0px;
}

%Navbar {
	a:link {
		font-family: var(--font-family__primary);
		text-decoration: none;
	}

	li {
		list-style-type: none;
	}

	li + li {
		margin-left: 2em;
	}
}



/* Main styles */
body {
	margin: 0px;
}


#hero {
	background-image: var(--img__hero);
	background-size: cover;
	background-attachment: fixed;
	
	display: flex;
	height: 40em;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 3em;

	#hero__navbar {
		display: flex;
		flex-direction: row;
		justify-content: center;
	}

	@extend %Navbar;

	a {
		color: #000;
	}
} /* hero */


#about-me {
	margin: var(--margin__main-content);
	@include SectionCard(var(--img__about-me));
}


#another-card {
	margin: var(--margin__main-content);
	@include SectionCard(var(--img__another-card));
}


#services {
	margin: var(--margin__main-content);

	h2 {
		text-align: center;
	}
}


	#services__foundation {
		@include ServiceCard(var(--img__foundation));
	}

	#services__comprehensive {
		@include ServiceCard(var(--img__comprehensive));
	}

	#services__portfolio {
		@include ServiceCard(var(--img__portfolio));
	}

	#services__something-else {
		@include ServiceCard(var(--img__something-else));
	}



#contact {
	display: flex;
	flex-direction: column;

	margin: var(--margin__main-content);

	h2 {
		text-align: center;
	}

	p {
		line-height: var(--line-height__content);
	}
}
	#contact__btn-email {
		@extend %Button;
	}

	#contact__btn-phone {
		@extend %Button;
	}



#footer {
	@extend %Navbar;

	background: #333;

	padding-top: 3rem;
	padding-bottom: 2rem;
}
	#footer__navbar {
		display: flex;
		flex-direction: row;
		justify-content: center;

		a {
			color: #fff;
		}
	}

